fix(validation): add more validation
- ensure request fields meet the specified length boundary
- prevent duplication of request with the same description

[Delivers #157913266]
